--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,11 +13,18 @@
     "incremental": true,
     "skipLibCheck": true,
     "strict": true,
+    "resolveJsonModule": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": false,
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@app/*": ["./src/app/*"],
+      "@helpers/*": ["./src/helpers/*"],
+      "@infra/*": ["./src/infra/*"],
+      "@test/*": ["./test/*"]
+    }
   }
 }
